--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,18 @@ jobs:
           echo "IS_DEVELOPMENT=${{ secrets.IS_DEVELOPMENT }}" >> .env
           echo "PORT=${{ secrets.PORT }}" >> .env
 
+      - name: Prepare directory on EC2
+        run: |
+          ssh ec2-user@${{ secrets.EC2_PUBLIC_IP }} "mkdir -p /home/ec2-user/playground-dev/simple-withdraw-api"
+
       - name: Copy project files to EC2
         run: |
-          rsync -avz --delete ./ ec2-user@${{ secrets.EC2_PUBLIC_IP }}:/home/playground-dev/simple-withdraw-api
+          rsync -avz --delete ./ ec2-user@${{ secrets.EC2_PUBLIC_IP }}:/home/ec2-user/simple-withdraw-api
 
       - name: Deploy on EC2
         run: |
           ssh ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-            cd /home/playground-dev/simple-withdraw-api
+            cd /home/ec2-user/playground-dev/simple-withdraw-api
             docker stop simple-app || true && docker rm simple-app || true
             docker build -t simple-app .
             docker run -d --name simple-app --env-file .env -p 6005:6005 simple-app
