--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,17 @@ jobs:
         run: |
           ssh ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
             cd /home/ec2-user/playground-dev/simple-withdraw-api
+
             docker stop simple-app || true && docker rm simple-app || true
+
             docker build -t simple-app .
-            docker run -d --name simple-app --env-file .env -p 6005:6005 simple-app
+
+            docker network create simple-net || true
+
+            docker run -d \
+              --name simple-app \
+              --network simple-net \
+              --env-file .env \
+              -p 6005:6005 \
+              simple-app
           EOF
